[package]
name = "luftraum"
version = "0.2.0"
edition = "2024"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "benchmarks"
harness = false

# Test for now
[dependencies]
jemallocator = "0.5.4"

# Load config files
serde = "1.0.228"
toml = "0.9.7"

# bevy = { version = "0.16.1", features = ["meshlet", "meshlet_processor"] }
bevy = "0.16.1"
bevy_panorbit_camera = {version = "0.28.0", features = ["bevy_egui"] }
bevy_egui = "0.36"

# Collect data from MQTT broker
rumqttc = "0.25"

tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4"

# Performance monitoring
dhat = "0.3.3"

[features]
dhat-heap = []

[profile.release]
debug = true