[package]
name = "luftraum"
version = "0.2.3"
edition = "2024"

#[dev-dependencies]
#divan = "0.1.21"

#[[bench]]
#name = "benchmarks"
#harness = false

# Performance monitoring
#dhat = "0.3.3"

[dependencies]
jemallocator = "0.5.4"

tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4"

bevy = "0.16.1"
bevy_panorbit_camera = {version = "0.28.0", features = ["bevy_egui"] }
bevy_egui = "0.36.0"

# Load config files
serde = "1.0.228"
toml = "0.9.7"

# Collect data from MQTT broker
rumqttc = "0.25"

# Hex lookup, hexdb.io cache
kv = { version = "0.24", features = ["json-value"] }
reqwest = "0.12.23"
serde_json = "1.0.145"
once_cell = "1.21.3"

#[features]
#dhat-heap = []
#
#[profile.release]
#debug = true